infra/k8s/default/bt-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: bt-backend-svc-$CI_ENVIRONMENT_NAME
  name: bt-backend-svc-$CI_ENVIRONMENT_NAME
  namespace: default
spec:
  ports:
    - name: http-bt-port
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    component: bt-backend-$CI_ENVIRONMENT_NAME
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: bt-backend-$CI_ENVIRONMENT_NAME
  name: bt-backend-$CI_ENVIRONMENT_NAME
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: bt-backend-$CI_ENVIRONMENT_NAME
  template:
    metadata:
      labels:
        component: bt-backend-$CI_ENVIRONMENT_NAME
    spec:
      containers:
        - command:
            - /bin/sh
            - -c
            - >
              python3 /backend/manage.py runserver 0.0.0.0:5000;
          image: $GCR_PATH_BACKEND:$CI_COMMIT_SHORT_SHA
          imagePullPolicy: Always
          name: bt-backend-$CI_ENVIRONMENT_NAME
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/google
              name: bt-backend-secrets-volume
              readOnly: true
      volumes:
        - name: bt-backend-secrets-volume
          secret:
            defaultMode: 420
            items:
              - key: google-tokens
                path: auth.json
            secretName: bt-backend-secrets-$CI_ENVIRONMENT_NAME
