infra/k8s/default/bt-elasticsearch.yaml
# https://www.deepnetwork.com/blog/2020/03/13/password-protected-efk-stack-on-k8s.html
kind: Service
apiVersion: v1
metadata:
  name: bt-elasticsearch
  namespace: default
  labels:
    component: bt-elasticsearch
spec:
  type: ClusterIP
  selector:
    component: bt-elasticsearch
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: bt-elasticsearch
  name: bt-elasticsearch
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: bt-elasticsearch
  template:
    metadata:
      labels:
        component: bt-elasticsearch
    spec:
      volumes:
        - name: bt-elasticsearch-config
          configMap:
            name: bt-elasticsearch-config
        - name: bt-elasticsearch-pvc
          persistentVolumeClaim:
            claimName: bt-elasticsearch
      containers:
        - name: bt-elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.12.0
          ports:
            - containerPort: 9200
              name: rest
              protocol: TCP
            - containerPort: 9300
              name: inter-node
              protocol: TCP
          volumeMounts:
            - name: bt-elasticsearch-config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
            - name: bt-elasticsearch-pvc
              mountPath: /usr/share/elasticsearch/data
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    [...]
          resources:
            limits:
              cpu: 500m
              memory: 4Gi
          # env:
          #   - name: ELASTICSEARCH_USERNAME
          #     valueFrom:
          #       secretKeyRef:
          #         name: general-secrets
          #         key: ELASTICSEARCH_USERNAME
          #   - name: ELASTICSEARCH_USERNAME
          #     valueFrom:
          #       secretKeyRef:
          #         name: general-secrets
          #         key: ELASTICSEARCH_USERNAME
