infra/k8s/default/bt-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    appName: bt-frontend-$CI_ENVIRONMENT_NAME
  name: bt-frontend-$CI_ENVIRONMENT_NAME
  namespace: default
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    appName: bt-frontend-$CI_ENVIRONMENT_NAME
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    appName: bt-frontend-$CI_ENVIRONMENT_NAME
  name: bt-frontend-$CI_ENVIRONMENT_NAME
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      appName: bt-frontend-$CI_ENVIRONMENT_NAME
  template:
    metadata:
      labels:
        appName: bt-frontend-$CI_ENVIRONMENT_NAME
    spec:
      containers:
        - command:
            - npm
            - run
            - prod
          image: $CI_REGISTRY_IMAGE/bt-frontend:$CI_COMMIT_BRANCH
          imagePullPolicy: IfNotPresent
          name: bt-frontend-$CI_ENVIRONMENT_NAME
