infra/k8s/default/bt-psql.yaml
apiVersion: v1
kind: Service
metadata:
  name: bt-psql-${CI_ENVIRONMENT_NAME}
  labels:
    component: bt-psql-${CI_ENVIRONMENT_NAME}
spec:
  selector:
    component: bt-psql-${CI_ENVIRONMENT_NAME}
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bt-psql-${CI_ENVIRONMENT_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      component: bt-psql-${CI_ENVIRONMENT_NAME}
  template:
    metadata:
      labels:
        component: bt-psql-${CI_ENVIRONMENT_NAME}
    spec:
      volumes:
        - name: bt-psql-data
          persistentVolumeClaim:
            claimName: bt-psql-${CI_ENVIRONMENT_NAME}
        - name: bt-psql-config
          configMap:
            name: bt-psql-${CI_ENVIRONMENT_NAME}
        - name: pg-conf-placeholder
          emptyDir: {}
      containers:
        - name: bt-psql
          command:
            - /bin/sh
            - -c
            - |
              ./docker-entrypoint.sh postgres # -c listen_addresses='localhost'; # Can add command-line options
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    cp /pg-conf-placeholder/pg_hba.conf /pg-conf-placeholder/postgresql.conf /var/lib/postgresql/data;
          image: postgres:12
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: bt-psql-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
            - name: pg-conf-placeholder
              mountPath: /pg-conf-placeholder
