infra/k8s/default/bt-ingress-infra.yaml
# This template file depends on environment variables
# See infra/init.sh for how to apply this to cluster with envsubst

# This ingress file is purely concerned with single-instance routes, most
# likely on the infrastructure side. This contrasts with the primary and
# tricycle ingresses because those routes need to account for dev-vs-prod env

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bt-ingress-infra-$INGRESS_LABEL-public
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.k8s.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |-
      server_name $BASE_DOMAIN_NAME ~^www\.;
      if ($host ~* www\.(.*)) {
        set $host_without_www $1;
        rewrite ^(.*)$ $scheme://$host_without_www$1 permanent;
      }
spec:
  tls:
    - hosts:
        - berkeleytime.com
        - "*.berkeleytime.com"
      secretName: bt-tls
  rules:
    - host: $BASE_DOMAIN_NAME
      http:
        paths:
          - path: /git
            pathType: Prefix
            backend:
              service:
                name: bt-gitlab
                port:
                  number: 80
          - path: /webhooks/github
            pathType: Prefix
            backend:
              service:
                name: bt-github-notify
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bt-ingress-infra-$INGRESS_LABEL-protected-routes
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.k8s.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: bt-ingress-protected-routes
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Login with credentials"
spec:
  tls:
    - hosts:
        - berkeleytime.com
      secretName: bt-tls
  rules:
    - host: $BASE_DOMAIN_NAME
      http:
        paths:
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: bt-kibana-kibana
                port:
                  number: 5601
